Updated styling files

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/back-to-top.css">
+    <link rel="stylesheet" href="assets/css/mobile-menu.css">
 </head>
 <body>
     
@@ -663,6 +664,7 @@
     <script src="assets/js/components.js"></script>
     <script src="assets/js/footer.js"></script>
     <script src="assets/js/back-to-top.js"></script>
+    <script src="assets/js/mobile-menu.js"></script>
 
 </body>
 </html>
