Updated mobile menu styling

--- a/index.html
+++ b/index.html
@@ -401,8 +401,10 @@
         <!-- Submenu for New & Featured -->
         <div class="mobile-submenu" id="newFeaturedSubmenu">
             <div class="submenu-header">
-                <i class="bx bx-chevron-left back-to-menu"></i>
-                <span>All</span>
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>All</span>
+                </div>
                 <i class="bi bi-x-lg close-submenu"></i>
             </div>
             <div class="submenu-content">
