Updated mobile menu

--- a/index.html
+++ b/index.html
@@ -373,10 +373,18 @@
                 <div class="menu-item-with-submenu">
                     <a href="#" class="toggle-submenu" data-submenu="newFeaturedSubmenu">New & Featured <i class="bx bx-chevron-right"></i></a>
                 </div>
-                <a href="#">Men <i class="bx bx-chevron-right"></i></a>
-                <a href="#">Women <i class="bx bx-chevron-right"></i></a>
-                <a href="#">Kids <i class="bx bx-chevron-right"></i></a>
-                <a href="#">Sale <i class="bx bx-chevron-right"></i></a>
+                <div class="menu-item-with-submenu">
+                    <a href="#" class="toggle-submenu" data-submenu="menSubmenu">Men <i class="bx bx-chevron-right"></i></a>
+                </div>
+                <div class="menu-item-with-submenu">
+                    <a href="#" class="toggle-submenu" data-submenu="womenSubmenu">Women <i class="bx bx-chevron-right"></i></a>
+                </div>
+                <div class="menu-item-with-submenu">
+                    <a href="#" class="toggle-submenu" data-submenu="kidsSubmenu">Kids <i class="bx bx-chevron-right"></i></a>
+                </div>
+                <div class="menu-item-with-submenu">
+                    <a href="#" class="toggle-submenu" data-submenu="saleSubmenu">Sale <i class="bx bx-chevron-right"></i></a>
+                </div>
                 <a href="#">SNKRS</a>
             </div>
             <div class="mobile-menu-jordan">
@@ -416,6 +424,97 @@
                     <li><a href="#">Trending</a></li>
                     <li><a href="#">Shop Icons</a></li>
                     <li><a href="#">Shop By Sport</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Submenu for Men -->
+        <div class="mobile-submenu" id="menSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>All</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Men</h2>
+                <ul>
+                    <li><a href="#">New Arrivals</a></li>
+                    <li><a href="#">Bestsellers</a></li>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Clothing</a></li>
+                    <li><a href="#">Shop By Sport</a></li>
+                    <li><a href="#">Accessories and Equipments</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Submenu for Women -->
+        <div class="mobile-submenu" id="womenSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>All</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Women</h2>
+                <ul>
+                    <li><a href="#">New Arrivals</a></li>
+                    <li><a href="#">Bestsellers</a></li>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Clothing</a></li>
+                    <li><a href="#">Shop By Sport</a></li>
+                    <li><a href="#">Accessories and Equipments</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Submenu for Kids -->
+        <div class="mobile-submenu" id="kidsSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>All</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Kids</h2>
+                <ul>
+                    <li><a href="#">New Arrivals</a></li>
+                    <li><a href="#">Bestsellers</a></li>
+                    <li><a href="#">Featured</a></li>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Clothing</a></li>
+                    <li><a href="#">Kids By Age</a></li>
+                    <li><a href="#">Shop By Sport</a></li>
+                    <li><a href="#">Accessories and Equipments</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Submenu for Sale -->
+        <div class="mobile-submenu" id="saleSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>All</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Sale</h2>
+                <ul>
+                    <li><a href="#">Shop All Sale</a></li>
+                    <li><a href="#">Bestsellers</a></li>
+                    <li><a href="#">Last Chance</a></li>
+                    <li><a href="#">Men's Sale</a></li>
+                    <li><a href="#">Women's Sale</a></li>
+                    <li><a href="#">Kids' Sale</a></li>
+                    <li><a href="#">Shop By Sports</a></li>
                 </ul>
             </div>
         </div>
