--- a/index.html
+++ b/index.html
@@ -530,10 +530,10 @@
                 <ul>
                     <li><a href="#" class="toggle-submenu">New Arrivals</a></li>
                     <li><a href="#" class="toggle-submenu">Bestsellers</a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Shoes <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Clothing <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Shop By Sport <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Accessories and Equipments <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="menShoesSubmenu">Shoes <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="menClothingSubmenu">Clothing <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="menShopSportSubmenu">Shop By Sport <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="menAccessoriesSubmenu">Accessories and Equipments <i class="bx bx-chevron-right"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -552,10 +552,10 @@
                 <ul>
                     <li><a href="#" class="toggle-submenu">New Arrivals</a></li>
                     <li><a href="#" class="toggle-submenu">Bestsellers</a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Shoes <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Clothing <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Shop By Sport <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Accessories and Equipments <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="womenShoesSubmenu">Shoes <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="womenClothingSubmenu">Clothing <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="womenShopSportSubmenu">Shop By Sport <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="womenAccessoriesSubmenu">Accessories and Equipments <i class="bx bx-chevron-right"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -574,12 +574,12 @@
                 <ul>
                     <li><a href="#" class="toggle-submenu">New Arrivals</a></li>
                     <li><a href="#" class="toggle-submenu">Bestsellers</a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Featured <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Shoes <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Clothing <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Kids By Age <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Shop By Sport <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Accessories and Equipments <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="kidsfeaturedSubmenu">Featured <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="kidsShoesSubmenu">Shoes <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="kidsClothingSubmenu">Clothing <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="kidsAgeSubmenu">Kids By Age <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="kidsShopSportSubmenu">Shop By Sport <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="kidsAccessoriesSubmenu">Accessories and Equipments <i class="bx bx-chevron-right"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -599,10 +599,10 @@
                     <li><a href="#" class="toggle-submenu">Shop All Sale</a></li>
                     <li><a href="#" class="toggle-submenu">Bestsellers</a></li>
                     <li><a href="#" class="toggle-submenu">Last Chance</a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Men's Sale <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Women's Sale <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Kids' Sale <i class="bx bx-chevron-right"></i></a></li>
-                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="featuredSubmenu">Shop By Sports <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="saleMenSubmenu">Men's Sale <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="saleWomenSubmenu">Women's Sale <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="saleKidSubmenu">Kids' Sale <i class="bx bx-chevron-right"></i></a></li>
+                    <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="saleShopSportSubmenu">Shop By Sports <i class="bx bx-chevron-right"></i></a></li>
                 </ul>
             </div>
         </div>
