Updated menu and sumenu

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             </div>
         </div>
 
-        <!-- Submenu for Men -->
+        <!-- Submenu for Men and its menus -->
         <div class="mobile-submenu" id="menSubmenu">
             <div class="submenu-header">
                 <div class="left-side back-to-menu">
@@ -537,8 +537,98 @@
                 </ul>
             </div>
         </div>
+        <!-- Shoes -->
+        <div class="mobile-submenu" id="menShoesSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Men</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Shoes</h2>
+                <ul>
+                    <li><a href="#">All Shoes</a></li>
+                    <li><a href="#">Lifestyle</a></li>
+                    <li><a href="#">Jordan</a></li>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Football</a></li>
+                    <li><a href="#">Basketball</a></li>
+                    <li><a href="#">Gym and Training</a></li>
+                    <li><a href="#">Skateboarding</a></li>
+                    <li><a href="#">Sandals and Slides</a></li>
+                    <li><a href="#">Nike By You</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Clothing -->
+        <div class="mobile-submenu" id="menClothingSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Men</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Clothing</h2>
+                <ul>
+                    <li><a href="#">All Clothing</a></li>
+                    <li><a href="#">Tops and T-Shirts</a></li>
+                    <li><a href="#">Shorts</a></li>
+                    <li><a href="#">Pants and Leggings</a></li>
+                    <li><a href="#">Hoodies and Sweatshirts</a></li>
+                    <li><a href="#">Jackets and Gilets</a></li>
+                    <li><a href="#">Jersys and Kits</a></li>
+                    <li><a href="#">Jordan</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Shop By Sport -->
+        <div class="mobile-submenu" id="menShopSportSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Men</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Shop By Sport</h2>
+                <ul>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Basketball</a></li>
+                    <li><a href="#">Football</a></li>
+                    <li><a href="#">Golf</a></li>
+                    <li><a href="#">Tennis</a></li>
+                    <li><a href="#">Gym and Training</a></li>
+                    <li><a href="#">Yoga</a></li>
+                    <li><a href="#">Skateboarding</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Accessories and Equipments -->
+        <div class="mobile-submenu" id="menAccessoriesSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Men</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Accessories and Equipments</h2>
+                <ul>
+                    <li><a href="#">All Accessories and Equipments</a></li>
+                    <li><a href="#">Bags and Backpacks</a></li>
+                    <li><a href="#">Socks</a></li>
+                    <li><a href="#">Hats and Headwear</a></li>
+                </ul>
+            </div>
+        </div>
 
-        <!-- Submenu for Women -->
+        <!-- Submenu for Women and its menus -->
         <div class="mobile-submenu" id="womenSubmenu">
             <div class="submenu-header">
                 <div class="left-side back-to-menu">
@@ -559,8 +649,100 @@
                 </ul>
             </div>
         </div>
+        <!-- Shoes -->
+        <div class="mobile-submenu" id="womenShoesSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Women</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Shoes</h2>
+                <ul>
+                    <li><a href="#">All Shoes</a></li>
+                    <li><a href="#">Lifestyle</a></li>
+                    <li><a href="#">Jordan</a></li>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Football</a></li>
+                    <li><a href="#">Basketball</a></li>
+                    <li><a href="#">Gym and Training</a></li>
+                    <li><a href="#">Sandals and Slides</a></li>
+                    <li><a href="#">Nike By You</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Clothing -->
+        <div class="mobile-submenu" id="womenClothingSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Women</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Clothing</h2>
+                <ul>
+                    <li><a href="#">All Clothing</a></li>
+                    <li><a href="#">Performance Essentials</a></li>
+                    <li><a href="#">Tops and T-Shirts</a></li>
+                    <li><a href="#">Sports Bras</a></li>
+                    <li><a href="#">Pants and Leggings</a></li>
+                    <li><a href="#">Shorts</a></li>
+                    <li><a href="#">Hoodies and Sweatshirts</a></li>
+                    <li><a href="#">Jackets and Gilets</a></li>
+                    <li><a href="#">Skirts and Dresses</a></li>
+                    <li><a href="#">Nike Maternity</a></li>
+                    <li><a href="#">Plus Size</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Shop By Sport -->
+        <div class="mobile-submenu" id="womenShopSportSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Women</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Shop By Sport</h2>
+                <ul>
+                    <li><a href="#">Yoga</a></li>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Gym and Training</a></li>
+                    <li><a href="#">Basketball</a></li>
+                    <li><a href="#">Tennis</a></li>
+                    <li><a href="#">Golf</a></li>
+                    <li><a href="#">Football</a></li>
+                    <li><a href="#">Skateboarding</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Accessories and Equipments -->
+        <div class="mobile-submenu" id="womenAccessoriesSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Women</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Accessories and Equipments</h2>
+                <ul>
+                    <li><a href="#">All Accessories and Equipments</a></li>
+                    <li><a href="#">Bags and Backpacks</a></li>
+                    <li><a href="#">Socks</a></li>
+                    <li><a href="#">Hats and Headwear</a></li>
+                </ul>
+            </div>
+        </div>
 
-        <!-- Submenu for Kids -->
+        <!-- Submenu for Kids and its menus -->
         <div class="mobile-submenu" id="kidsSubmenu">
             <div class="submenu-header">
                 <div class="left-side back-to-menu">
@@ -583,8 +765,126 @@
                 </ul>
             </div>
         </div>
+        <!-- Featured -->
+        <div class="mobile-submenu" id="kidsfeaturedSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Kids</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Featured</h2>
+                <ul>
+                    <li><a href="#">Back to School</a></li>
+                    <li><a href="#">Sports Gear</a></li>
+                    <li><a href="#">Lifestyle Looks</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Shoes -->
+        <div class="mobile-submenu" id="kidsShoesSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Kids</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Shoes</h2>
+                <ul>
+                    <li><a href="#">All Shoes</a></li>
+                    <li><a href="#">Lifestyle</a></li>
+                    <li><a href="#">Jordan</a></li>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Football</a></li>
+                    <li><a href="#">Basketball</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Clothing -->
+        <div class="mobile-submenu" id="kidsClothingSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Kids</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Clothing</h2>
+                <ul>
+                    <li><a href="#">All Clothing</a></li>
+                    <li><a href="#">Tops and T-Shirts</a></li>
+                    <li><a href="#">Sports Bras</a></li>
+                    <li><a href="#">Pants and Leggings</a></li>
+                    <li><a href="#">Hoodies and Sweatshirts</a></li>
+                    <li><a href="#">Pant and Leggings</a></li>
+                    <li><a href="#">Shorts</a></li>
+                    <li><a href="#">Jackets and Gilets</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Kids By Age -->
+        <div class="mobile-submenu" id="kidsAgeSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Kids</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Kids By Age</h2>
+                <ul>
+                    <li><a href="#">Older Kids (7-14 years)</a></li>
+                    <li><a href="#">Younger Kids (7-4 years)</a></li>
+                    <li><a href="#">Babies & Toddlers (0-4 years)</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Shop By Sport -->
+        <div class="mobile-submenu" id="kidsShopSportSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Kids</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Shop By Sport</h2>
+                <ul>
+                    <li><a href="#">Football</a></li>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Basketball</a></li>
+                    <li><a href="#">Gym and Training</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Accessories and Equipments -->
+        <div class="mobile-submenu" id="kidsAccessoriesSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Kids</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Accessories and Equipments</h2>
+                <ul>
+                    <li><a href="#">All Accessories and Equipments</a></li>
+                    <li><a href="#">Bags and Backpacks</a></li>
+                    <li><a href="#">Socks</a></li>
+                    <li><a href="#">Hats and Headwear</a></li>
+                </ul>
+            </div>
+        </div>
 
-        <!-- Submenu for Sale -->
+        <!-- Submenu for Sale and its menus -->
         <div class="mobile-submenu" id="saleSubmenu">
             <div class="submenu-header">
                 <div class="left-side back-to-menu">
@@ -603,6 +903,80 @@
                     <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="saleWomenSubmenu">Women's Sale <i class="bx bx-chevron-right"></i></a></li>
                     <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="saleKidSubmenu">Kids' Sale <i class="bx bx-chevron-right"></i></a></li>
                     <li class="has-submenu"><a href="#" class="toggle-submenu" data-submenu="saleShopSportSubmenu">Shop By Sports <i class="bx bx-chevron-right"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Men's Sale -->
+        <div class="mobile-submenu" id="saleMenSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Sale</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Men's Sale</h2>
+                <ul>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Clothing</a></li>
+                    <li><a href="#">Accessories and Equipments</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Women's Sale -->
+        <div class="mobile-submenu" id="saleWomenSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Sale</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Women's Sale</h2>
+                <ul>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Clothing</a></li>
+                    <li><a href="#">Accessories and Equipments</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Kids Sale -->
+        <div class="mobile-submenu" id="saleKidSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Sale</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Kids Sale</h2>
+                <ul>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Clothing</a></li>
+                    <li><a href="#">Accessories and Equipments</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Shop By Sports -->
+        <div class="mobile-submenu" id="saleShopSportSubmenu">
+            <div class="submenu-header">
+                <div class="left-side back-to-menu">
+                    <i class="bx bx-chevron-left back-to-menu"></i>
+                    <span>Sale</span>
+                </div>
+                <i class="bi bi-x-lg close-submenu"></i>
+            </div>
+            <div class="submenu-content">
+                <h2>Shop By Sports</h2>
+                <ul>
+                    <li><a href="#">Football</a></li>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Basketball</a></li>
+                    <li><a href="#">Gym and Training</a></li>
+                    <li><a href="#">Tennis</a></li>
                 </ul>
             </div>
         </div>
